--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "MX_Alps_Hybrid.pretty"]
 	path = MX_Alps_Hybrid.pretty
 	url = https://github.com/ai03-2725/MX_Alps_Hybrid.pretty
+[submodule "marbastlib"]
+	path = marbastlib
+	url = https://github.com/ebastler/marbastlib
+[submodule "Kicad-RP2040-lib"]
+	path = Kicad-RP2040-lib
+	url = https://github.com/Sleepdealr/Kicad-RP2040-lib
